[gd_scene load_steps=7 format=3 uid="uid://d3t5jlp2b7meb"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_vklvw"]
[ext_resource type="Shader" path="res://pause_menu.gdshader" id="2_buc1e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8400f"]
shader = ExtResource("2_buc1e")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_hiedx"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hgpjm"]
resource_name = "blur"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0, 0.809, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uuysp"]
_data = {
"RESET": SubResource("Animation_hiedx"),
"blur": SubResource("Animation_hgpjm")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vklvw")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8400f")
layout_mode = 0
offset_right = 1146.0
offset_bottom = 648.0

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 344.0
offset_top = 242.0
offset_right = 816.0
offset_bottom = 359.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Continuer" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Continuer"

[node name="Relancer" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Relancer"

[node name="Quitter" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quitter"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uuysp")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/Continuer" to="." method="_on_continuer_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Relancer" to="." method="_on_relancer_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quitter" to="." method="_on_quitter_pressed"]
